--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "integrating-with-hubspot-i-foundations-practicum",
+    "name": "andrea-basso-iwh-i-practicum",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -9,7 +9,8 @@
     "author": "HubSpot Academy learner",
     "license": "ISC",
     "dependencies": {
-        "axios": "^1.3.5",
+        "axios": "^1.4.0",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "pug": "^3.0.2"
     }
